--- a/main.css
+++ b/main.css
@@ -27,13 +27,13 @@
 }
 
 .main {
-    height: 800px;
+    height: 100vh;
     width: 100%;
     max-width: 450px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .selected {
@@ -41,7 +41,8 @@
     height: 110px;
 }
 
-div {
+.color {
     width: 100%;
     height: 100px;
+    min-height: 50px;
 }
